--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,11 @@ buildscript {
 
         daggerVersion = '2.15'
 
-        junitVersion = '4.12'
         testRunnerVersion = '1.1.1'
-        espressoCoreVersion = '3.1.1'
+
+        robolectricVersion = '3.3.2'
+        mockitoVersion = '1.10.19'
+        mockitoKotlinVersion = '2.1.0'
     }
 
     dependencies {
