--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ buildscript {
         robolectricVersion = '3.3.2'
         mockitoVersion = '1.10.19'
         mockitoKotlinVersion = '2.1.0'
+        mockitoInlineVersion = '2.13.0'
     }
 
     dependencies {
